style.css
/* CSS Reset by Josh W Comeau   https://www.joshwcomeau.com/css/custom-css-reset/*/

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}
/*
    2. Remove default margin and padding
  */
* {
  padding: 0;
  margin: 0;
}
/*
    3. Allow percentage-based heights in the application
  */
html,
body {
  height: 100%;
}
/*
    Typographic tweaks!
    4. Add accessible line-height
    5. Improve text rendering
  */
body {
  -webkit-font-smoothing: antialiased;
}
/*
    6. Improve media defaults
  */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}
/*
    7. Remove built-in form typography styles
  */
input,
button,
textarea,
select {
  font: inherit;
}
/*
    8. Avoid text overflows
  */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}
/*
    9. Create a root stacking context
  */
#root,
#__next {
  isolation: isolate;
}

:root {
  /* Colors */
  --clr-accent-dark: hsl(300, 43%, 22%);
  --clr-accent-regular: hsl(333, 80%, 67%);
  --clr-text-accent: hsl(303, 10%, 53%);
  --clr-bg-body: hsl(300, 24%, 96%);
  --clr-text-card: hsl(0, 0%, 100%);
  /* --------------------------- */

  /* Font Sizes */
  --fs-heading: 3rem;
  --fs-main: 0.9375rem;

  /* ------------------ */

  /* Font Families */
  --ff-main: "League Spartan", sans-serif;
  /* --------------- */

  /* Font Weights */
  --fw-regular: 400;
  --fw-medium: 500;
  --fw-bold: 700;
  /* --------------- */
}

body {
  font-size: var(--fs-main);
  font-weight: var(--fw-regular);
  font-family: var(--ff-main);
  line-height: 1.5;
}

ul li {
  list-style: none;
}

.container {
  max-width: min(95%, 1200px);
  margin-inline: auto;
}

.row {
  display: flex;
  gap: 15em;
  margin-block: 5rem;
}

.main-heading {
  font-size: var(--fs-heading);
  max-width: 15ch;
  line-height: 1;
  color: var(--clr-accent-dark);
  margin-bottom: 0.5em;
}

.main-paragraph {
  max-width: 45ch;
  color: var(--clr-text-accent);
}

.ratings {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  justify-content: center;
}

.rating {
  color: var(--clr-accent-dark);
  font-size: 1rem;
  font-weight: 900;
}

.rating::before {
  content: "";
  width: 100%;
  background-image: url("images/icon-star.svg");
  height: 2px;
}

.rating:nth-child(2) {
  transform: translateX(50px);
}
.rating:nth-child(3) {
  transform: translateX(100px);
}

.reviews {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.5rem;
}

.card__review {
  background-color: var(--clr-accent-dark);
  padding: 1.75em;
  border-radius: 10px;
  color: #fff;
}

.card__review-reviewer-details {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-bottom: 1.5rem;
}

.card__review-img {
  width: 40px;
  border-radius: 50%;
}

